# LCC_Review_Sentiment_Cluster

./: .gitignore  LCC_data_collect.ipynb  README.md  Skytrax.pkl  Trustpilot.pkl  bad_reviews.csv  pyproject.toml  report.html
