[project]
name = "examples"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "bertopic>=0.17.4",
    "faker>=40.13.0",
    "matplotlib>=3.10.8",
    "nltk>=3.9.4",
    "openpyxl>=3.1.5",
    "pandas>=3.0.1",
    "playwright>=1.60.0",
    "scikit-learn>=1.8.0",
    "seaborn>=0.13.2",
    "seleniumbase>=4.47.9",
    "sentence-transformers>=5.5.1",
    "tqdm>=4.67.3",
    "umap-learn>=0.5.12",
    "wordcloud>=1.9.6",
]
